Fixed bug with captions not displayed properly on mobile devices.

--- a/src/styles/site.less
+++ b/src/styles/site.less
@@ -132,10 +132,12 @@ h2 {
     top: 0;
     transition: opacity 0.25s ease-in-out;
     width: 100%;
+    visibility: hidden;
 }
 
 #portfolio ul.portfolio-items li .portfolio-item:hover .item-caption {
     opacity: 1;
+    visibility: visible;
 }
 
 #portfolio ul.portfolio-items li .portfolio-item:hover img {
